--- a/formio-mongodb/templates/secret.yaml
+++ b/formio-mongodb/templates/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: {{ .Values.app_group }}
     name: {{ .Values.mongodb_service_name }}
-  name: {{ .Values.mongodb_secret_name }}-secret
+  name: {{ .Values.mongodb_secret_name }}
 stringData:
   NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb_user }}:{{ .Values.mongodb_password }}@{{ .Values.mongodb_service_name }}:27017/{{ .Values.mongodb_database }}?replicaSet={{ .Values.mongodb_replica_name }}"}'
   admin-password: {{ .Values.mongodb_admin_password }}
