--- a/forms-flow-ai/templates/secret.yaml
+++ b/forms-flow-ai/templates/secret.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  creationTimestamp: null
   labels:
-    app: "{{ .Values.name }}"
-  name: "{{ .Values.name }}"
+    app: "{{ .Chart.Name }}"
+  name: "{{ .Chart.Name }}"
 stringData:
   BPM_CLIENT_ID: "{{ .Values.bpm_keycloak_clientid }}"
   BPM_CLIENT_SECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
