--- a/redash-redis-cluster-dc/templates/configmap.yaml
+++ b/redash-redis-cluster-dc/templates/configmap.yaml
@@ -18,6 +18,5 @@ kind: ConfigMap
 metadata:
   labels:
     app: {{ .Values.app_name }}
-    name: {{ .Values.name }}
-    template: {{ .Values.name }}-template
-  name: {{ .Values.name }}
+    name: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
