--- a/camunda-postgres/templates/configmap.yaml
+++ b/camunda-postgres/templates/configmap.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
     app-group: {{ .Values.app_group }}
-    template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-config
+  name: {{ .Chart.Name }}
 data:
   DATABASE_HOST: "{{ .Values.database_host }}"
   DATABASE_NAME: "{{ .Values.database_name }}"
