--- a/camunda-postgres/templates/secret.yaml
+++ b/camunda-postgres/templates/secret.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
     app-group: {{ .Values.app_group }}
-    template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-secret
+  name: {{ .Chart.Name }}
 stringData:
   DATABASE_ADMIN_PASSWORD: {{ .Values.postgresql_admin_password }}
   DATABASE_PASSWORD: {{ .Values.postgresql_password }}
