--- a/forms-flow-ai/templates/configmap.yaml
+++ b/forms-flow-ai/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: forms-flow-ai-config
+  name: {{ .Chart.Name }}
 data:
   CAMUNDA_API_URI: https://{{ .Values.camunda_bpm_url }}/camunda
   FORMIO_DEBUG: "formio:*"
