--- a/forms-flow-analytics-postgresql-deploy/templates/secret.yaml
+++ b/forms-flow-analytics-postgresql-deploy/templates/secret.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
     app-group: {{ .Values.app_group }}
-    template: {{ .Values.name }}-deploy
-  name: {{ .Values.name }}-secret
+  name: {{ .Chart.Name }}
 stringData:
   DATABASE_ADMIN_PASSWORD: {{ .Values.postgresql_admin_password }}
   DATABASE_PASSWORD: {{ .Values.postgresql_password }}
   DATABASE_TEST_PASSWORD: {{ .Values.postgresql_test_password }}
-  DATABASE_URL: postgresql://{{ .Values.database_user }}:{{ .Values.postgresql_password }}@{{ .Values.name }}:{{ .Values.database_port }}/{{ .Values.database_name }}
+  DATABASE_URL: postgresql://{{ .Values.database_user }}:{{ .Values.postgresql_password }}@{{ .Chart.Name }}:{{ .Values.database_port }}/{{ .Values.database_name }}
 type: Opaque
