--- a/forms-flow-analytics/templates/secret.yaml
+++ b/forms-flow-analytics/templates/secret.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  creationTimestamp: null
   labels:
-    app: "{{ .Values.name }}"
-  name: "{{ .Values.name }}"
+    app: "{{ .Chart.Name }}"
+  name: "{{ .Chart.Name }}"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
   PYTHONUNBUFFERED: "0"
