--- a/forms-flow-analytics/templates/service.yaml
+++ b/forms-flow-analytics/templates/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   ports:
   - name: "7000"
     port: 7000
     targetPort: 5000
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
 status:
   loadBalancer: {}
