--- a/forms-flow-bpm/templates/service.yaml
+++ b/forms-flow-bpm/templates/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   ports:
   - name: camunda
     port: 8080
     targetPort: 8080
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
