--- a/forms-flow-forms/templates/route.yaml
+++ b/forms-flow-forms/templates/route.yaml
@@ -2,8 +2,8 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   host: {{ .Values.forms_url }}
   port:
@@ -13,6 +13,6 @@ spec:
     termination: edge
   to:
     kind: Service
-    name: {{ .Values.name }}
+    name: {{ .Chart.Name }}
     weight: 100
   wildcardPolicy: None
