--- a/forms-flow-forms/templates/service.yaml
+++ b/forms-flow-forms/templates/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}
 spec:
   ports:
   - name: "3001"
     port: 3001
     targetPort: 3001
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Chart.Name }}
 status:
   loadBalancer: {}
