--- a/forms-flow-web/templates/deploymentconfig.yaml
+++ b/forms-flow-web/templates/deploymentconfig.yaml
@@ -5,7 +5,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: {{ .Values.app_name }}
-  name: {{ .Values.name }}
+  name: {{ .Chart.Name }}
 spec:
   replicas: 1
   selector:
@@ -34,27 +34,27 @@ spec:
     spec:
       containers:
       - env: null
-        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.name }}
+        image: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
         imagePullPolicy: Always
-        name: {{ .Values.name }}
+        name: {{ .Chart.Name }}
         ports:
         - containerPort: 8080
         resources: {}
         tty: true
         volumeMounts:
         - mountPath: {{ .Values.kc_mount_path }}
-          name: {{ .Values.name }}-keycloak-config
+          name: {{ .Chart.Name }}-keycloak-config
           readOnly: true
         - mountPath: {{ .Values.mount_path }}
-          name: {{ .Values.name }}-config
+          name: {{ .Chart.Name }}
           readOnly: true
       restartPolicy: Always
       volumes:
       - configMap:
           defaultMode: 420
-          name: {{ .Values.name }}-keycloak-config
-        name: {{ .Values.name }}-keycloak-config
+          name: {{ .Chart.Name }}-keycloak-config
+        name: {{ .Chart.Name }}-keycloak-config
       - configMap:
           defaultMode: 420
-          name: {{ .Values.name }}-config
-        name: {{ .Values.name }}-config
+          name: {{ .Chart.Name }}
+        name: {{ .Chart.Name }}
