--- a/forms-flow-web/values.yaml
+++ b/forms-flow-web/values.yaml
@@ -3,13 +3,13 @@ camunda_url: formsflow.bpm.apps.devops.aot-technologies.com
 cpu_limit: 750m
 cpu_request: 100m
 forms_url: formio.apps.devops.aot-technologies.com
+image_tag: latest
 kc_mount_path: /usr/share/nginx/html/config/kc
 keycloak_realm: forms-flow-ai
 keycloak_url: formsflow.idm.apps.devops.aot-technologies.com
 memory_limit: 2Gi
 memory_request: 100Mi
 mount_path: /usr/share/nginx/html/config/
-name: forms-flow-web
 react_app_anonymous_id: '61856bbc69b630461b977ae1'
 react_app_client_id: '61856bbc69b630461b977ae3'
 react_app_staff_designer_id: '61856bbc69b630f304977adf'
@@ -20,6 +20,5 @@ redash_secret_key: '# TODO: must define a default value for .redash_secret_key'
 source_context_dir: /forms-flow-web 
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai 
-tag_name: latest
 web_api_url: formsflow.webapi.apps.devops.aot-technologies.com
 web_url: formsflow.web.apps.devops.aot-technologies.com
