--- a/redash-redis-cluster-dc/templates/imagestream.yaml
+++ b/redash-redis-cluster-dc/templates/imagestream.yaml
@@ -2,7 +2,7 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: "{{ .Values.name }}"
+  name: "{{ .Chart.Name }}"
 spec:
   tags:
   - from:
