--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 dependencies:
-  - name: camunda-postgres
+  - name: camunda-postgresql
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
   - name: formio-mongodb
