--- a/forms-flow-idm/templates/configmap.yaml
+++ b/forms-flow-idm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: "{{.Release.Name }}"
+    name: "forms-flow-idm"
 data:
   "realm.json": |- 
     {
